--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="card-body">
             <div class="card" style="width: 18rem">
               <img
-                src="/assets/baskets.png"
+                src="/images/baskets.jpg"
                 class="card-img-top"
                 alt="baskets"
               />
@@ -121,7 +121,7 @@
 
           <div class="card-body">
             <div class="card" style="width: 18rem">
-              <img src="/assets/socks.png" class="card-img-top" alt="socks" />
+              <img src="/images/socks.jpg" class="card-img-top" alt="socks" />
               <div class="card-body">
                 <h5 class="card-title">Socks</h5>
                 <p class="card-text">This is a socks</p>
@@ -141,7 +141,8 @@
           <!-- Product 3 : bag -->
           <div class="card-body">
             <div class="card" style="width: 18rem">
-              <img src="/assets/bag.png" class="card-img-top" alt="bag" />
+              <img src="/images/bag.png
+              " class="card-img-top" alt="bag" />
               <div class="card-body">
                 <h5 class="card-title">Bag</h5>
                 <p class="card-text">This is a Bag</p>
